controller/pkg/kgateway/setup/testdata/standard/extproc-routerule-out.yaml
clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_kubernetes_443
  type: EDS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_gwtest_extproc_9091
  type: EDS
  typedExtensionProtocolOptions:
    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
      '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
      explicitHttpConfig:
        http2ProtocolOptions: {}
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_gwtest_ratings_8080
  type: EDS
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_gwtest_reviews_8080
  type: EDS
endpoints:
- clusterName: kube_gwtest_reviews_8080
  endpoints:
  - lbEndpoints:
    - endpoint:
        address:
          socketAddress:
            address: 10.244.1.11
            portValue: 8080
      loadBalancingWeight: 1
    loadBalancingWeight: 1
    locality:
      region: r1
      subZone: r1z2s3
      zone: r1z2
  - lbEndpoints:
    - endpoint:
        address:
          socketAddress:
            address: 10.244.2.14
            portValue: 8080
      loadBalancingWeight: 1
    loadBalancingWeight: 1
listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - disabled: true
          name: global_disable/ext_proc
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.set_metadata.v3.Config
            metadata:
            - metadataNamespace: dev.kgateway.disable_ext_proc
              value:
                disable: true
        - disabled: true
          name: ext_proc/gwtest/extproc-ext
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.common.matching.v3.ExtensionWithMatcher
            extensionConfig:
              name: composite_ext_proc
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.http.composite.v3.Composite
            xdsMatcher:
              matcherList:
                matchers:
                - onMatch:
                    action:
                      name: composite-action
                      typedConfig:
                        '@type': type.googleapis.com/envoy.extensions.filters.http.composite.v3.ExecuteFilterAction
                        typedConfig:
                          name: envoy.filters.http.ext_proc
                          typedConfig:
                            '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                            failureModeAllow: true
                            grpcService:
                              envoyGrpc:
                                clusterName: kube_gwtest_extproc_9091
                  predicate:
                    singlePredicate:
                      customMatch:
                        name: envoy.matching.matchers.metadata_matcher
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.input_matchers.metadata.v3.Metadata
                          invert: true
                          value:
                            boolMatch: true
                      input:
                        name: disable
                        typedConfig:
                          '@type': type.googleapis.com/envoy.extensions.matching.common_inputs.network.v3.DynamicMetadataInput
                          filter: dev.kgateway.disable_ext_proc
                          path:
                          - key: disable
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
routes:
- ignorePortInHostMatching: true
  name: listener~8080
  virtualHosts:
  - domains:
    - example.com
    name: listener~8080~example_com
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            extProc:
            - gateway.kgateway.dev/TrafficPolicy/gwtest/route-test
      name: listener~8080~example_com-route-0-httproute-route-gwtest-0-0-matcher-0
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        weightedClusters:
          clusters:
          - name: kube_gwtest_reviews_8080
            weight: 1
          - name: kube_gwtest_ratings_8080
            weight: 1
      typedPerFilterConfig:
        ext_proc/gwtest/extproc-ext:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
          overrides: {}
